css/main.scss
---
---

@import url(https://fonts.googleapis.com/css?family=Meddon);
@import url(https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,400,300);
@import url(https://weloveiconfonts.com/api/?family=entypo);

/* entypo */
[class*="entypo-"]:before {
  font-family: 'entypo', sans-serif;
}

@font-face {
    font-family: "Peaches";
    src: url(../fonts/Cream-Peach.ttf) format("truetype");
}

:root {
    --home-color: #4c8dca;
    --about-color: #f1fffa;
    --services-color: #ccfccb;
    --financial-color: #96e6b3;
    --forms-color: #568259;
    --contact-color: #464e47;
  }

body, ul, li {
  margin: 0;
  padding: 0;
}

body {
    background-color: #ccc;
    margin: auto;
}

header {
  width: 100%;
  height: 70px;
  box-sizing: border-box;
  background-color: #373948;
  position: fixed;
}

header h1 {
  float: left;
  color: white;
  font-family: 'Peaches';
  margin: 18px auto 12px 20px;
}

header nav ul {
  height: 70px;
  float: right;
}

header nav ul li {
  height: 70px;
  display: inline-block;
}

header nav ul li a {
  height: 30px;
  display: block;
  padding: 17px 20px;
  color: white;
  font-size: 2.2em;
  text-decoration: none;
  border-top: 3px solid #373948;
  border-bottom: 3px solid #373948;
  -webkit-transition: color 1s ease;
  -moz-transition: color 1s ease;
  -o-transition: color 1s ease;
  transition: color 1s ease;
}

header nav ul li a:hover{
  color: #373948;
}

header nav ul li a.active{
  height: 33px;
  border-bottom: none;
}

header nav ul li a.link-1 { background-color: var(--home-color) }
header nav ul li a.link-2 { background-color: var(--about-color); }
header nav ul li a.link-3 { background-color: var(--services-color); }
header nav ul li a.link-4 { background-color: var(--financial-color); }
header nav ul li a.link-5 { background-color: var(--forms-color); }
header nav ul li a.link-6 { background-color: var(--contact-color); }

section {
    width: 100%;
    height: 800px;
    box-sizing: border-box;
    padding: 20px;
    overflow: hidden;

    div {
        padding-left: 20%;
        padding-right: 20%;
    }
}

section#home {
    background-color: var(--home-color);
    background-image: url('../assets/trees.png');
    background-repeat: no-repeat;
    background-size: cover;
    margin-top: 70px;
    padding-top: 13.5%;
    height: 0%;
    padding-bottom: 13.5%;
    margin: 0 auto;

    div {
        text-align: center;

        h2 {
            color: #fff;
            -webkit-text-stroke-width: 1px;
            -webkit-text-stroke-color: gray;
            font-size: 3.5em;
        }

        p {
            color: #000000;
        }
    }
}
section#about {
    background-color: var(--about-color);
    color: #000000;

    div {
        h2 {
            color: #000000;
            // text-align: center;
        }

        p {
            color: #000000;
        }
    }
}
section#services {
    background-color: var(--services-color);
    color: #000000;

    div {
        h2 {
            color: #000000;
        }

        p {
            color: #000000;
        }
    }

    table {
        tr {
            padding-top: 50px;
            padding-bottom: 50px;

            td div {
                padding-left: 0px;
                padding-right: 0px;
            }
        }
    }

    #icon
    {
        -webkit-transition: all 0.5s ease;
        height: 160px;
        width: 160px;
        margin: auto;
        
        border-radius: 90px;
        font-size: 80px;
        text-align: center;
        
        background: #fafafa;
        color: #001126;
        border: 2px dashed #919191;
        box-shadow: 0px 0px 5px 5px #fafafa;
    }

    #icon:hover
    {
        background: #fafafa;
        color: #4c8dca;
        border: 2px dashed #4c8dca;
        box-shadow: 0px 0px 5px 5px #fafafa;
    }

    .label
    {
        padding-top: 80px;
        font-size: 20px;
        font-weight: normal;
    }

    #pad {
        transform: scale(0.8);
    }
}
section#financial {
    background-color: var(--financial-color);
    color: #FFFFFF;
}
section#forms {
    background-color: var(--forms-color);
    color: #FFFFFF;

    div div span ul {
        padding-bottom: 10px;
    }
}
section#contact {
    background-color: var(--contact-color);
    color: #FFFFFF;
}

section {
    color: white;
    font-family: 'Open Sans', sans-serif;
    font-weight: 300;

    ul {
        list-style-type: none;
    }
}

section h2 {
  font-size: 3em;
  margin: 0px;
}

section p {
  color: white;
  font-family: 'Open Sans', sans-serif;
  font-weight: 300;
  font-size: 1em; 
}

footer {
    background: #272727;
    padding-top: 1px;
}

.icon {
    width: 100%;
    height: auto;
    margin: auto;
}

.icon ul {
    margin: 0px;
    padding: 0px;
    text-align: center;
}

.icon ul li {
    display: inline-block;
    width: 50px;
    height: 50px;
    margin: 0px 10px;
    border-radius: 100%;
    background: #7DCEA0;
}

.icon ul li a {
    text-decoration: none;
    color: #272727;
    font-size: 25px;
    display: block;
}

.icon ul li a i {
    line-height: 50px;
}

.icon ul li:hover {
    background: #e67e22;
}

.icon ul li a:hover > i {
    transform: scale(1.6) rotate(25deg);
}

.nav {
    width: 100%;
    height: auto;
    margin: auto;
    margin-top: 5px;
}

.nav ul {
    margin: 0px;
    padding: 0px;
    text-align: center;
}


.nav ul li {
    display: inline-block;
    margin: 10px 20px;
}

.nav ul li a {
    text-decoration: none;
    outline: none;
    font-family: 'Open Sans', sans-serif;
    font-size: 20px;
    color: #fff;
    font-weight: bold;
    text-transform: uppercase;
    letter-spacing: 1px;
}

.nav ul li a:hover {
    color: #e67e22;
}

.footer-end {
    height: auto;
    margin: auto;
    padding: 10px;
    font-family: 'Open Sans', sans-serif;
    font-size: 16px;
    text-align: center;
}

.footer-end p {
    color: #fff;
    font-weight: bold;
    letter-spacing: 2px;
}

.footer-end a {
    text-decoration: none;
    color: #fff
}

.footer-end a:hover {
    color: #e67e22;
}

@media(max-width:604px ) {
    .nav ul li {
        padding: 0px;
    }
}

@media(max-width:559px ) {

    .nav1 ul li a, .nav ul li a {
        font-size: 13px;
    }
}

@media(max-width:539px ) {
    .nav ul li {
        margin: 5px 20px;
    }

    .nav ul li.p1 {
        padding-top: 10px;
    }
}

@media(max-width:380px ) {
    .nav ul li, .nav1 ul li {
        display: block;
        padding: 5px;
    }

    .icon ul li a i {
        line-height: 38px;
    }

    .icon ul li a {
        font-size: 20px;
    }

    .icon ul li {
        width: 40px;
        height: 40px;
    }
}

@media(max-width: 375px) {
    .nav ul li.p1 {
        padding-top: 0px;
    }
}

